syntax = "proto3";

package driver;

import "driver/message.proto";

message ListDriversRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDriversResponse {
  // The field name should match the noun "Driver" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated Driver drivers = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDriverRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message GetDriverResponse {
  Driver driver = 1;
}

message CreateDriverRequest {
  // The parent resource name where the Driver is to be created.
  string parent = 1;

  // The Driver id to use for this Driver.
  string driver_id = 2;

  // The Driver resource to create.
  // The field name should match the Noun in the method name.
  Driver driver = 3;
}

message CreateDriverResponse {
  Driver driver  = 1;
}

message UpdateDriverRequest {
  // The Driver resource which replaces the resource on the server.
  Driver driver = 1;
}

message UpdateDriverResponse {
  Driver driver  = 1;
}

message DeleteDriverRequest {
  // The resource name of the Driver to be deleted.
  string name = 1;
}

message DeleteDriverResponse {
  Driver driver  = 1;
}